[project]
name = "show-clock-in-cmd-console-sg"
description = "This comfyUI node intializes at startup automatically and displays the clock in CMD console when Process starts and ends."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/ShammiG/ComfyUI-Show-Clock-in-CMD-Console-SG"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/ShammiG/ComfyUI-Show-Clock-in-CMD-Console-SG/wiki"
"Bug Tracker" = "https://github.com/ShammiG/ComfyUI-Show-Clock-in-CMD-Console-SG/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Show-Clock-in-CMD-Console-SG"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

